# latte-plus-interpreter

./: .gitignore  Latte.cf  Makefile  README.md  declaration.txt  latte-plus-interpreter.cabal  wiktor-czyz.cabal
app/: Main.hs
app/Evaluator/: Err.hs  Helpers.hs  Interpreter.hs  Memory.hs  Types.hs
app/TypeChecker/: Err.hs  Helpers.hs  Memory.hs  TypeChecker.hs  Types.hs
bad/: 02.lat  03-modulo-by-zero.lat  04.lat  05.lat  06-unknown-function.lat  07.lat  08.lat  09-bad-infer.lat  10-type-error.lat
good/: 01.lat  02-nested.lat  02.lat  03-print.lat  03-zmienne-przypisanie.lat  04-fib.lat  04.lat  05-pow.lat  05.lat  06-arith.lat  06.lat  07-static-binding.lat  07.lat  08-while.lat  08.lat  09-assign.lat  09-przeslanianie-2.lat  09-statyczne-wiazanie.lat  09.lat  10-by-value.lat  11-by-variable.lat  12-shadowing.lat  12.lat  13-closures.lat  14-higher-order.lat  15-static-binding-2.lat  17-wyzszego-rzedu.lat
good/expected-output/: 02-literaly-arytmetyka-porownania.out  03-print.out  03-zmienne-przypisanie.out  04-print.out  05-while-if.out  06-arith.out  09-13-17-przeslanianie-statyczne-wiazanie-wyzszego-rzedu.out  09-assign.out  13-closures.out  17-domkniecia.out  17-wyzszego-rzedu.out
