cabal-version:      2.4
name:               latte
version:            0.1.0.0

author:             Wiktor Czyż
maintainer:         czyz.wiktor@gmail.com

extra-source-files: CHANGELOG.md

executable interpreter
  main-is:          Main.hs

  other-modules:
    Evaluator.Interpreter
    Evaluator.Types
    Evaluator.Memory
    Evaluator.Helpers
    Evaluator.Err
    TypeChecker.TypeChecker
    TypeChecker.Types
    TypeChecker.Memory
    TypeChecker.Helpers
    TypeChecker.Err
    -- generated
    LexLatte
    ParLatte
    AbsLatte
    ErrM

  build-depends:    
      base ^>= 4.16.3.0
    , transformers
    , containers
    , array
  hs-source-dirs:   app, generated
  default-language: Haskell2010
  ghc-options:
    -Wall
