cabal-version:      2.4
name:               latte
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Wiktor Czyż
maintainer:         czyz.wiktor@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable interpreter
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
        Evaluator.Interpreter
        Evaluator.Types
        Evaluator.Memory
        Evaluator.Helpers
        Evaluator.Err
        TypeChecker.TypeChecker
        TypeChecker.Types
        TypeChecker.Memory
        TypeChecker.Helpers
        TypeChecker.Err
        -- generated
        LexLatte
        ParLatte
        AbsLatte
        ErrM

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base >= 4.13
                    , transformers
                    , containers
                    , array
    hs-source-dirs:   app, generated
    default-language: Haskell2010
